--- a/library-express/package.json
+++ b/library-express/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "forever": "^4.0.1",
-    "nodemon": "^2.0.14"
+    "nodemon": "^2.0.14",
+    "request": "^2.88.2"
   }
 }
