--- a/library-express/package.json
+++ b/library-express/package.json
@@ -13,6 +13,7 @@
     "express": "^4.17.1",
     "express-handlebars": "^6.0.1",
     "forever": "^4.0.1",
+    "mysql": "^2.18.1",
     "nodemon": "^2.0.15",
     "request": "^2.88.2"
   }
